refactor(King, Knight): 메소드 통일 및 간소화